// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortBy renders markup with state 1`] = `
<ng-ais-sort-by
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-SortBy"
  >
    
        
    <select
      class="ais-SortBy-select"
    >
      
          
      
      <option
        class="ais-SortBy-option"
        value="foo"
      >
        
            foo
          
      </option>
      <option
        class="ais-SortBy-option"
        value="bar"
      >
        
            bar
          
      </option>
      
        
    </select>
    
      
  </div>
    
</ng-ais-sort-by>
`;

exports[`SortBy renders markup without state 1`] = `
<ng-ais-sort-by
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-SortBy"
  >
    
        
    <select
      class="ais-SortBy-select"
    >
      
          
      
      
        
    </select>
    
      
  </div>
    
</ng-ais-sort-by>
`;
